<?xml version="1.0" encoding="utf-8"?><!--
Copyright (C) 2009 University of Washington Licensed under the Apache
License, Version 2.0 (the "License"); you may not use this file except in
compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software distributed
under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
OR CONDITIONS OF ANY KIND, either express or implied. See the License for
the specific language governing permissions and limitations under the License.
-->


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin_small"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        app:cardElevation="@dimen/margin_medium">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_extra_extra_large">

            <TextView
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_size_medium"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                android:text="@string/form_success_header"
                android:textSize="@dimen/text_size_large" />

            <ImageView
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:src="@drawable/form_entry_end_image" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:src="@drawable/one_icon" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:layout_width="176dp"
                    android:text="@string/confirm_input_data" />
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:src="@drawable/two_icon" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:layout_width="wrap_content"
                    android:text="@string/submit_instruction" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        style="@style/Widget.Collect.Button.HomeScreen"
        android:background="@drawable/round_button_blue"
        android:id="@+id/save_exit_button"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_extra_extra_large"
        android:layout_marginRight="@dimen/margin_extra_extra_large"
        android:layout_width="match_parent"
        android:text="@string/quit_entry"
        android:textColor="@android:color/white" />

</LinearLayout>
